Bug 81945 - FILESAVE: Corrupt : Nested sdt content leading to corruption
Summary: FILESAVE: Corrupt : Nested sdt content leading to corruption
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other All
: high major
Assignee: Rajashri
URL:
Whiteboard: BSA target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-31 06:26 UTC by Rajashri
Modified: 2014-09-01 08:29 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
The original file (43.65 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-07-31 06:26 UTC, Rajashri
Details
Optimised file (44.11 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-07-31 06:27 UTC, Rajashri
Details
Round Trip of the optimised file (21.78 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-07-31 06:28 UTC, Rajashri
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rajashri 2014-07-31 06:26:35 UTC
Created attachment 103721 [details]
The original file

Problem description: 

Steps to reproduce:
1. Open the file in Libre Office
2. Save the file in docx format
3. Open the file in MS Office Word

Current behavior:
- The file is not opening as it is corrupted.
Expected behavior:
- The file should open properly and there should not be any corruption.
              
Operating System: All
Version: 4.4.0.0.alpha0+ Master
Comment 1 Rajashri 2014-07-31 06:27:33 UTC
Created attachment 103722 [details]
Optimised file
Comment 2 Rajashri 2014-07-31 06:28:01 UTC
Created attachment 103723 [details]
Round Trip of the optimised file
Comment 3 Jorendc 2014-07-31 09:07:34 UTC
Synerzip -> NEW
Comment 4 Commit Notification 2014-08-08 07:39:08 UTC
Vinaya Mandke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=60fad3fabb26a50ea238bed2f046670c6e5678f7

fdo#81945 [DOCX] Round Tripped file corrupted due to nested SDTs



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Jorendc 2014-09-01 08:29:32 UTC
Fix applied + Unit test -> RESOLVED FIXED