fdo#81945 [DOCX] Round Tripped file corrupted due to nested SDTs

Original File contains two separate SDTs which are getting
nested during RT as follows:-

sdtStart [MARK] rPr [MARK] sdtEND RunSTART
          ==PREPEND==> sdtStart [MARK] sdtEND RunSTART rPr RunEND
Now Another SDT starts
sdtStart [MARK] sdtEND RunSTART rPr RunEND [MARK] sdtStart
          ==PREPEND==>  sdtStart [MARK] sdtStart sdtEND RunSTART rPr RunEND

So, in such cases wait before closing the earlier sdt, to avoid nesting. Thus the [MARK]
can be retained in the corrrect position, to start the new SDT and end the earlier SDT.

Change-Id: Ia86f94c0587a5d44ab23391ea9ac38f86b5dd250